# LLM-Chatbot-Microservice-Platform

./: LLM Chatbot Microservice.postman_collection.json  README.md  features_and_architecture.md  llm-chatbot.code-workspace  llm_chatbot_microservice_roadmap.md  project_timeline.md
.cursor/rules/: init-monrepo-microservices.mdc
llm-chatbot-services/: .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
llm-chatbot-services/services/: pyproject.toml
llm-chatbot-services/services /api_gateway/: pyproject.toml
llm-chatbot-services/services /auth_service/: pyproject.toml
llm-chatbot-services/services /conversaation_service/: pyproject.toml
llm-chatbot-services/services/api_gateway/: config.py  dockerfile  pyproject.toml
llm-chatbot-services/services/api_gateway/app/: main.py
llm-chatbot-services/services/api_gateway/app/dependencies/: dependency_factory.py
llm-chatbot-services/services/api_gateway/app/middleware/: auth_middleware.py  public_path.py  rate_limiter.py
llm-chatbot-services/services/api_gateway/app/routes/: __init__.py  auth_proxy.py  chatbot_proxy.py  conversation_proxy.py  health.py
llm-chatbot-services/services/api_gateway/app/services/: proxy_client.py
llm-chatbot-services/services/auth_service/: .env-example  README.md  config.py  dockerfile  pyproject.toml
llm-chatbot-services/services/auth_service/app/: main.py
llm-chatbot-services/services/auth_service/app/dependencies/: __init__.py  auth.py  dependency_factory.py  roles.py
llm-chatbot-services/services/auth_service/app/dependencies/authentication/: __init__.py  assert_token_validity.py  auth.py  invalidate_token.py
llm-chatbot-services/services/auth_service/app/models/: __init__.py  refresh_tokens.py  users.py
llm-chatbot-services/services/auth_service/app/repositories/: refresh_token_repository.py  user_repository.py
llm-chatbot-services/services/auth_service/app/routes/: health.py
llm-chatbot-services/services/auth_service/app/schemas/: __init__.py  reset_password.py  token.py  user_create.py  user_login.py  validated_token.py
llm-chatbot-services/services/auth_service/app/services/: db.py  jwt_utils.py  password.py  refresh_token_service.py  reset_password_service.py  token_generator.py  user_service.py
llm-chatbot-services/services/auth_service/app/services/database/: __init__.py  config.py  db.py  engine.py  session.py
llm-chatbot-services/services/chatbot_service/: .env-example  config.py  dockerfile  pyproject.toml
llm-chatbot-services/services/chatbot_service/app/: main.py
llm-chatbot-services/services/chatbot_service/app/dependencies/: dependency_factory.py
llm-chatbot-services/services/chatbot_service/app/llm/: base.py  factory.py  gemini.py
llm-chatbot-services/services/chatbot_service/app/routes/: chat.py  health.py
llm-chatbot-services/services/chatbot_service/app/schemas/: chat_schema.py
llm-chatbot-services/services/chatbot_service/app/services/: chat_service.py  conversation_client.py
llm-chatbot-services/services/chatbot_service/app/utils/: errors.py
llm-chatbot-services/services/conversation_service/: .env-example  config.py  dockerfile  pyproject.toml
llm-chatbot-services/services/conversation_service/app/: main.py
llm-chatbot-services/services/conversation_service/app/dependencies/: dependency_factory.py
llm-chatbot-services/services/conversation_service/app/models/: conversation.py
llm-chatbot-services/services/conversation_service/app/repositories/: conversation_repository.py
llm-chatbot-services/services/conversation_service/app/routes/: __init__.py  conversation.py  health.py  semantic_search.py
llm-chatbot-services/services/conversation_service/app/schemas/: __init__.py  conversation.py
llm-chatbot-services/services/conversation_service/app/services/: conversation_service.py  redis.py  vector_db_service.py
llm-chatbot-services/services/conversation_service/app/utils/: embedding_utils.py
llm-chatbot-services/services/postgres-init/: init-db.sh
llm-chatbot-services/shared/: README.md  logger.py  pyproject.toml
llm-chatbot-services/shared/shared/: __init__.py  base_config.py  config_error.py  logger.py  redis.py
llm-chatbot-services/shared/shared/database/: __init__.py  config.py  db.py  engine.py
project-documentation/deployment/: checklist.md
project-documentation/roadmap/: README.md
project-documentation/service-documentation/api-gateway/: openapi.json
project-documentation/service-documentation/auth-service/: openai.json
project-documentation/service-documentation/conversation-service/: openapi.json
project-documentation/specs/: high_level_architecture.md
project-documentation/specs/api-gateway/: api-gateway-plan.md
project-documentation/specs/chatbot-service/: chatbot_service_plan.md
project-documentation/specs/conversation-serevice/: remaining-specs.md
project-documentation/status/: week2_auth_login.md
project-documentation/status/Week1/: week1_setup.md
project-documentation/status/Week2/: week2.1_auth_login.md  week2.2_auth_refresh_token.md  week2.3_conversation_service.md
project-documentation/status/Week3/: week3.1_api_gateway.md
