[tool.poetry]
name = "llm-chatbot-services"
version = "0.1.0"
description = "LLM-powered chatbot microservice platform"
authors = ["Swayam Swarooop Mishra <swayam.swaroop175@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

