[project]
name = "llm-chatbot-services"
version = "0.1.0"
description = "LLM-powered chatbot microservice platform"
authors = [
    {name = "Swayam Swaroop Mishra <swayam.swaroop175@gmail.com>}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
