[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the LLM Chatbot Services"
authors = ["Swayam Swaroop Mishra <swayam.swaroop175@example.com>"]
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 