[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the LLM Chatbot Services"
authors = ["Swayam Swaroop Mishra <swayam.swaroop175@example.com>"]
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
redis = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 