[project]
name = "conversaation-service"
version = "0.1.0"
description = "Manages storage and retrieval of user conversation history, context memory, and vector embeddings."
authors = [
    {name = "Swayam Swarooop Mishra",email = "swayam.swaroop175@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
