[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "Acts as the single entry point to all services, routing requests and handling authentication, logging, and validation."
authors = ["Swayam Swarooop Mishra <swayam.swaroop175@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.41"
shared = {path = "../../shared", develop = true}
dotenv = "^0.9.9"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
