[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Handles user registration, login, and JWT-based authentication for the LLM chatbot platform."
authors = ["Swayam Swarooop Mishra <swayam.swaroop175@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
