[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Handles user registration, login, and JWT-based authentication for the LLM chatbot platform."
authors = ["Swayam Swarooop Mishra <swayam.swaroop175@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.2.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.41"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
