[tool.poetry]
name = "conversation-service"
version = "0.1.0"
description = "Manages storage and retrieval of user conversation history, context memory, and vector embeddings."
authors = ["Swayam Swarooop Mishra <swayam.swaroop175@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
shared = {path = "../../shared", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"